Fix spacing on news index

--- a/src/pages/news.module.scss
+++ b/src/pages/news.module.scss
@@ -113,8 +113,9 @@
 @media screen and (max-width: 666px) {
     .remaining-post {
         display: block;
-        height: 536px;
+        height: 100%;
     }
+
     .remaining-title {
         font-size: 1.2rem;
     }
